<resources>
    <string name="app_name">Vilnius Guide</string>
    <string name="img_desc_object_picture">Object picture</string>
    <string name="img_desc_favourites">Favourites</string>
    <string name="img_desc_place_mark">Place mark</string>
    <string name="no_link">No link</string>
    <string name="category_name_arch">Architecture</string>
    <string name="category_name_sculpt">Sculpture</string>
    <string name="category_name_walks">Walks and Sightseeing</string>
    <string name="category_name_cinema">Cinema and Theatre</string>
    <string name="category_name_eat">Eat and Drink</string>
    <string name="category_name_shop">Shopping</string>
    <string name="category_name_favour">Favorites</string>
    <string name="arch_object_name_1">Cathedral basilica</string>
    <string name="arch_place_1">Katedros square 1</string>
    <string name="arch_official_link_1"><![CDATA[Official website: <a href= "http://www.katedra.lt/"
    >www.katedra.lt</a>]]></string>
    <string name="arch_description_1">The Cathedral of St. Stanislav and St. Vladislav is the most
        important place of worship for Lithuania’s Catholics, and the venue for the country’s main
        Christian and national festivities.\n\nIn 1922, the Cathedral was granted the title of
        \"Basilica\", by Pope Pius XI.\n\nMany key figures in Lithuanian history are buried in the
        Sovereigns’ Mausoleum, which is located beneath the chapel of St. Casimir. Its vaults
        contain the remains of Vytautas The Great, the Grand Duke of Lithuania, and King Alexander
        of Poland. The vaults are not only restricted to kings, either - the two wives of Žygimantas
        Augustas, Queen Elisabeth of Austria and Queen Barbora Radvilaitė. The cathedral containing
        the ashes of King Vladislovas Vaza (Wladyslaw Vasa) are also buried here.\n\nThe cathedral’s
        original temple dates back to between the 13th or 15th century.
    </string>
    <string name="arch_resources_1">http://www.vilnius-tourism.lt/en/what-to-see/places-to-visit/churches/cathedral-basilica/</string>
    <string name="arch_google_link_1">https://goo.gl/maps/X5pDAfpyeLk</string>
    <string name="arch_object_name_2">Church St. Bartholomew\’s</string>
    <string name="arch_place_2">Užupio str. 17A</string>
    <string name="arch_description_2">Little Saint Bartholomew\’s Church stands on the bank of the
        Vilnia river in Užupis. As you approach it seems to hide, blending in with the houses along
        the street leading to the Bernardine cemetery.\n\n
        The newly-constructed church was the victim of a fire during a war with Muscovy. In 1778 an
        oratory was built by the monks to a design by architect Martynas Knakfusas
        (Martin Knackfuss). This was later converted into a church by Fr Augustinas Stodolnikas in
        1823 - 1824. This church still survives, having had a steeple added in 1881.\n\n
        However it was closed by the Soviet occupation regime in 1949 and converted into a sculpture
        workshop. In 1997 Saint Bartholomew\’s Church was presented to the Belarussian Catholic
        community of Vilnius.
    </string>
    <string name="arch_resources_2">http://www.vilnius-tourism.lt/en/what-to-see/places-to-visit/churches/st-bartholomew-e2-80-99s-church/</string>
    <string name="arch_google_link_2">https://goo.gl/maps/KkYDSMeDLRD2</string>
    <string name="arch_object_name_3">Church of Bernardine</string>
    <string name="arch_place_3">Maironio str. 10</string>
    <string name="arch_official_link_3"><![CDATA[Official website: <a href= "http://www.bernardinuansamblis.lt">
    www.bernardinuansamblis.lt</a>]]></string>
    <string name="arch_description_3">A full name of the Church is the Church of St. Francis from
        Assisi (Bernardine). The building is monumental. In case of need it could have been used not
        only for prayer but also for defense. This is testified to by 19 aleois in the northern
        facade. Gothic pointed-arch windows and buttresses stand out on the facade; the 17th-century
        renaissance pediment is adjusted to the Gothic part with a 19th-century fresco. In the times
        of the Soviet occupation the Church was closed down and converted into a warehouse. After
        Lithuania re-established its independence, the Franciscan monks came back to the Church from
        the underground. The Bernardine complex has been declared to be a monument of Lithuanian
        cultural heritage, and in 2008 it was granted the status of a cultural project of importance
        to the state.\n\n2008 Vilnius Bernardine historical-architectural ensemble was reconstructed
        (lofts of the church, choir and administrative premises of the cloister, the gate of the church,
        the passage, the basement and the inner courtyard were renovated), tourist observation paths
        were made.\n\nWell-ordered heritage of Vilnius Bernardine historical-architectural ensemble,
        the entire complex of the tourist route and the Lithuanian museum of sacral art created will
        provide local and foreign tourists with the opportunity to become acquainted with the heritage of
        sacral art and gothic architecture in Lithuania.
    </string>
    <string name="arch_resources_3">http://www.vilnius-tourism.lt/en/what-to-see/places-to-visit/churches/bernardine-church/</string>
    <string name="arch_google_link_3">https://goo.gl/maps/mmZjjSu4Py32</string>
    <string name="arch_object_name_4">Church of Sts. Johns\'</string>
    <string name="arch_place_4">Šv. Jono str. 12</string>
    <string name="arch_official_link_4"><![CDATA[Official website: <a href= "http://www.jonai.lt">
    www.jonai.lt</a>]]></string>
    <string name="arch_description_4">One of the picturesque parts of the Vilnius University
        building is the Church of Sts. Johns\' and its bell tower. The full name of the church is
        the Church of St. John the Baptist and St. John the Evangelist.\n\nThe construction of this
        church lasted for almost 40 years and was completed in 1426.
        At that time it was a Gothic building. In 1571 the church was transferred to the Order of
        Jesuits and became a part of the university complexes.\n\nBesides masses, the Church of Sts.
        Johns\' has also witnessed student protests, theatre
        performances, and welcoming ceremonies for kings. In Soviet times, it was turned into a
        warehouse. Later, the University Museum was established here.\n\nToday, the Church of Sts.
        Johns\' performs its main functions once again.
        It was visited by Pope John Paul II in 1993.\n\nThe bell tower of the church, which is 68
        meters high, is among the highest buildings
        in the Old Town. The present facade was designed in the 18th century by the most prominent
        Vilnius Baroque architect, Jonas Kristupas Glaubicas (Johan Christoph Glaubitz).
    </string>
    <string name="arch_resources_4">http://www.vilnius-tourism.lt/en/what-to-see/places-to-visit/churches/church-of-sts-johns/</string>
    <string name="arch_google_link_4">https://goo.gl/maps/gA7rGGm1Gk62</string>
    <string name="arch_object_name_5">Church of St. Anne</string>
    <string name="arch_place_5">Maironio str. 8</string>
    <string name="arch_official_link_5"><![CDATA[Official website: <a href= "http://www.onosbaznycia.lt">www.onosbaznycia.lt</a>]]></string>
    <string name="arch_description_5">The church of St. Anne\'s is a masterpiece of the late Gothic
    period. There is no consensus about its originator or its construction period. Popular legend
    says that Napoleon Bonaparte, who was fascinated by the beauty of the church, wanted to take it
    back to Paris in the palm of his hand. Unfortunately, the reality is not that romantic: during
    the march of the Napoleonic army through Lithuania, the church was consigned to the French
    cavalry forces. However, Napoleon did mention in a letter to his wife that \"Vilnius is a very
    beautiful city\".\n\n
    St. Anne\'s Church, which has survived to the present day without changing for over 500 years,
    has become a symbol of Vilnius. At a closer look, one can see the letters A and M in the main
    facade of St. Anne\‘s. The letters A and M could stand for the Latin Ana Mater Maria or Ave
    Maria, i.e. \"Saint Anne - Mother of Mary\" or \"Hail Mary\". Some experts claim that the
    Pillars of Gediminas have been highlighted in the composition of the facade with the three
    towers of the church corresponding to the three pillars.\n\n
    Next to the church there is a bell tower initiating the Gothic style and built in the 19th
    century.
    </string>
    <string name="arch_resources_5">http://www.vilnius-tourism.lt/en/what-to-see/places-to-visit/churches/church-of-st-anne/</string>
    <string name="arch_google_link_5">https://goo.gl/maps/wLBWPaxUXPq</string>
    <string name="arch_object_name_6">Gates of Dawn</string>
    <string name="arch_place_6">Aušros Vartų str. 12</string>
    <string name="arch_official_link_6"><![CDATA[Official website: <a href= "http://www.ausrosvartai.lt">www.ausrosvartai.lt</a>]]></string>
    <string name="arch_description_6">The Gates of Dawn is one of the most visited shrines in
        Vilnius that is famous not only in Lithuania but also abroad, worshipped by the
        representatives of other creeds too. This is the only surviving gate of the first original
        five gates in the city wall that was built between 1503 and 1522.\n\nThe gates were first
        mentioned in 1514. At first the Gates of Dawn were called the Medininkai Gate, as it is on
        the road to Medininkai, in Polish Ostra Brama, the “Sharp Gate” because they were in the
        southern end of the city, which was called the Sharp.\n\nLater, due to the cult of the
        Virgin Mary they could be related to the sunrise, dawn.\n\nThe painting of the Blessed
        Virgin Mary, Mother of Mercy, in the Chapel of the Gates of Dawn is known all over the
        world. Many churches in other countries have copies of this painting. The picture, which is
        also called \"Vilnius Madonna\", was painted in 17th century. It is painted in the Renaissance
        style, in tempera on oak boards, later repainted in oil. Since the middle of the 17th
        century it has been said to have miracle-working powers. The Holy Mother of God of the Gates
        of Dawn has been granted the title of Mother of Mercy twice.
    </string>
    <string name="arch_resources_6">http://www.vilnius-tourism.lt/en/what-to-see/places-to-visit/churches/gates-of-dawn/</string>
    <string name="arch_google_link_6">https://goo.gl/maps/1FKDYBqMhqR2</string>
    <string name="arch_object_name_7">Church of St. Nicholas\'</string>
    <string name="arch_place_7">Didžioji str. 12</string>
    <string name="arch_description_7">Grand Hetman of the Grand Duchy of Lithuania (LDK) Constantine
        Astrozhski built this sanctuary in 1514. In the 18th century the Gothic Orhtodox Church was
        damaged by fire, and thus, restored in the late Baroque style. Later, by order of General
        Governor Muravyov, the Orthodox Church was remodelled in the Russian Byzantine style
        (a marble board in the wall of the chapel is dedicated to Muravyov). Notwithstanding the
        changes, a number of Gothic elements remained in the facade and interior.
    </string>
    <string name="arch_resources_7">http://www.vilnius-tourism.lt/en/what-to-see/places-to-visit/shrines/russian-orthodox-church-of-st-nicholas/</string>
    <string name="arch_google_link_7">https://goo.gl/maps/4uicWDWd8Mt</string>
    <string name="arch_object_name_8">Palace of the Grand Dukes Of Lithuania</string>
    <string name="arch_place_8">Katedros square 4</string>
    <string name="button_share">Share</string>
    <string name="button_more">More</string>
</resources>