<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.vilniusguide.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:contentDescription="@string/img_desc_object_picture"
        android:scaleType="centerCrop"
        android:src=""
        tools:src="@drawable/sculpture_angel" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/boycott"
            android:gravity="center_vertical"
            android:text="@string/arch_object_name_1"
            tools:text="Heading"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_button"
            android:paddingRight="@dimen/padding_medium"
            android:paddingStart="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_room_black_24dp"
            android:layout_gravity="center"
            android:padding="@dimen/padding_medium"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_favorite_border_black_24dp"
            android:layout_gravity="center"
            android:padding="@dimen/padding_medium"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium">

                <TextView
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/advent_pro_extralight"
                    android:padding="@dimen/padding_medium"
                    android:textSize="@dimen/text_size_description"
                    android:text="@string/arch_description_1"
                    tools:text="@string/arch_description_1" />
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/colorPrimaryDark"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:fontFamily="@font/boycott"
                    android:gravity="center"
                    android:text="@string/button_more"
                    android:textSize="@dimen/text_size_button" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryDark"
                    android:drawableLeft="@mipmap/ic_share_black_18dp"
                    android:drawableStart="@mipmap/ic_share_black_18dp"
                    android:fontFamily="@font/boycott"
                    android:gravity="center"
                    android:paddingLeft="@dimen/padding_medium"
                    android:paddingRight="@dimen/padding_medium"
                    android:paddingStart="@dimen/padding_medium"
                    android:text="@string/button_share"
                    android:textSize="@dimen/text_size_button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>